@@ -42,6 +42,7 @@ private:
 
 	// geant4 integrated (over the hit) information.
 	// DISABLED by default
+	// key is variable name
 	map<string, double> raws;
 
 	// digitized information coming from raws
@@ -51,10 +52,12 @@ private:
 
 	// geant4 step by step information.
 	// DISABLED by default
+	// key is variable name
 	map< string, vector <double> > allRaws;
 
 	// multi - digitized information from step by step
 	// DISABLED by default
+	// key is variable name
 	map< string, vector <int> >  multiDgt;
 
 	// quantized signal as a function of time bunch
@@ -94,7 +97,7 @@ public:
 	map< string, vector <double> > getAllRaws()    {return allRaws;}
 	map< string, vector <int> >    getMultiDgt()   {return multiDgt;}
 	map< int, vector <double> >    getChargeTime() {return chargeTime;}
-	map< int, int >         		 getQuantumS()   {return quantumS;}
+	map< int, int >         	   getQuantumS()   {return quantumS;}
 
 	double getIntRawVar(string s)
 	{
@@ -141,6 +144,30 @@ public:
 };
 
 
+/// \class fastMCForParticle
+/// <b> fastMCForParticle </b>\n\n
+/// Contains fastMC information for each detector, caused
+/// by a primary particle
+/// - original track momentum
+/// - smeared track momentum
+class fastMCForParticle
+{
+public:
+	fastMCForParticle(string detector)
+	{
+		pOrig  = G4ThreeVector(0,0,0);
+		pSmear = G4ThreeVector(0,0,0);
+	}
+	~fastMCForParticle(){;}
+
+	/// - stat (how many hits generated by this track)
+	G4ThreeVector pOrig;
+	G4ThreeVector pSmear;
+
+};
+
+
+
 
 /// \class generatedParticle
 /// <b> generatedParticle </b>\n\n
@@ -153,6 +180,7 @@ public:
 	generatedParticle()
 	{
 		pSum.clear();
+		fastMC.clear();
 	}
 	~generatedParticle(){;}
 
@@ -164,10 +192,12 @@ public:
 
 	// adding summary information for each detector.
 	vector<summaryForParticle> pSum;
+	vector<fastMCForParticle> fastMC;
 
 	int    getVariableFromStringI(string);
 	double getVariableFromStringD(string);
 };
+
 
 
 
