@@ -96,6 +96,12 @@ MEventAction::MEventAction(goptions opts, map<string, double> gpars)
 	WRITE_INTDGT     = replaceCharInStringWithChars(gemcOpt.optMap["INTEGRATEDDGT"].args, ",", "  ");
 	SIGNALVT         = replaceCharInStringWithChars(gemcOpt.optMap["SIGNALVT"].args, ",", "  ");
 	RFSETUP          = replaceCharInStringWithChars(gemcOpt.optMap["RFSETUP"].args, ",", "  ");
+	fastMCMode       = gemcOpt.optMap["FASTMCMODE"].arg;  // fast mc = 2 will increase prodThreshold and maxStep to 5m
+
+	// fastMC mode will set SAVE_ALL_MOTHERS to 1
+	// a bit cluncky for now
+	if(fastMCMode>0)
+		SAVE_ALL_MOTHERS = 1;
 
 	tsampling  = get_number(get_info(gemcOpt.optMap["TSAMPLING"].args).front());
 	nsamplings = get_number(get_info(gemcOpt.optMap["TSAMPLING"].args).back());
@@ -384,7 +390,7 @@ void MEventAction::EndOfEventAction(const G4Event* evt)
 			string vname = (*MHC)[0]->GetDetector().name;
 			string hitType = it->second->GetDetectorHitType(vname);
 			
-			HitProcess *hitProcessRoutine = getHitProcess(hitProcessMap, hitType);
+			HitProcess *hitProcessRoutine = getHitProcess(hitProcessMap, hitType, vname);
 			if(!hitProcessRoutine)
 				return;
 			
@@ -398,9 +404,11 @@ void MEventAction::EndOfEventAction(const G4Event* evt)
 			vector<hitOutput> allRawOutput;
 			
 			// creating summary information for each generated particle
-			for(unsigned pi = 0; pi<MPrimaries.size(); pi++)
+			for(unsigned pi = 0; pi<MPrimaries.size(); pi++) {
 				MPrimaries[pi].pSum.push_back(summaryForParticle("na"));
-			
+				if(fastMCMode >0)
+					MPrimaries[pi].fastMC.push_back(fastMCForParticle("na"));
+			}
 			
 			for(int h=0; h<nhits; h++)
 			{
@@ -436,6 +444,9 @@ void MEventAction::EndOfEventAction(const G4Event* evt)
 						vector<double> edeps = aHit->GetEdep();
 						vector<double> times = aHit->GetTime();
 						MPrimaries[pi].pSum.back().nphe = aHit->GetTIds().size();
+						if(fastMCMode >0) {
+							MPrimaries[pi].fastMC.back().pOrig = aHit->GetMom();
+						}
 						for(unsigned ss =0; ss<edeps.size(); ss++)
 						{
 							if(otids[ss] == (int) pi+1)
