@@ -136,6 +136,8 @@ public:
 	string WRITE_INTDGT;    ///< List of detectors for which digitized integrated info need to be NOT saved
 	string SIGNALVT;        ///< List of detectors for which voltage versus time need to be saved
 	string RFSETUP;         ///< Parameters for RF setup
+	int fastMCMode;         ///< In fast MC mode, the particle smeared/unsmeared momenta are saved
+
 
 	// sampling time of electronics (typically FADC)
 	// and number of samplings
